@@ -2,7 +2,8 @@ Version history of the R genetic analysis package (R/gap)
 
 Version 1.5-2
 29-01-2023	Import and modify in accordance with Rdpack
-		Reorganize DESCRIPTION, invoking Roxygen: list(markdown = TRUE), and revise gap.Rmd
+		Reorganize DESCRIPTION, adding Roxygen: list(markdown = TRUE), and document in Markdown
+		Revise gap.Rmd
 
 Version 1.5-1
 22-01-2023	Add rationale, @graham21 and @vosa21 for cs() together with minor changes in gap.Rmd
